Add initial app layouts with animated intro